src/test/ui/traits/trait-upcasting/type-checking-test-2.stderr
error[E0605]: non-primitive cast: `&dyn Foo<i32>` as `&dyn Bar<u32>`
  --> $DIR/type-checking-test-2.rs:20:13
   |
LL |     let _ = x as &dyn Bar<u32>; // Error
   |             ^^^^^^^^^^^^^^^^^^ invalid cast
   |
help: consider borrowing the value
   |
LL |     let _ = &x as &dyn Bar<u32>; // Error
   |             +

error[E0277]: the trait bound `&dyn Foo<i32>: Bar<u32>` is not satisfied
  --> $DIR/type-checking-test-2.rs:20:13
   |
LL |     let _ = x as &dyn Bar<u32>; // Error
   |             ^ the trait `Bar<u32>` is not implemented for `&dyn Foo<i32>`
   |
   = note: required for the cast to the object type `dyn Bar<u32>`

error[E0605]: non-primitive cast: `&dyn Foo<u32>` as `&dyn Bar<_>`
  --> $DIR/type-checking-test-2.rs:26:13
   |
LL |     let a = x as &dyn Bar<_>; // Ambiguous
   |             ^^^^^^^^^^^^^^^^ invalid cast
   |
help: consider borrowing the value
   |
LL |     let a = &x as &dyn Bar<_>; // Ambiguous
   |             +

error[E0277]: the trait bound `&dyn Foo<u32>: Bar<_>` is not satisfied
  --> $DIR/type-checking-test-2.rs:26:13
   |
LL |     let a = x as &dyn Bar<_>; // Ambiguous
   |             ^ the trait `Bar<_>` is not implemented for `&dyn Foo<u32>`
   |
   = note: required for the cast to the object type `dyn Bar<_>`

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0277, E0605.
For more information about an error, try `rustc --explain E0277`.
